# scaffold

./: .env  .env.example  .gitignore  Cargo.toml  DEMO.md  DEPLOY.md  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.agents.json  vite.config.ts
.github/workflows/: ci.yml
.kiro/specs/: scaffold.md
agents/: README.md  demo-runner.ts  spec.example.json  verifier-client.ts  verifier-server.ts  verifier.ts  worker.ts
agents/lib/: bedrock.ts  chain.ts  program.ts
contracts/: foundry.toml
contracts/script/: Deploy.s.sol  DeployLocal.s.sol
contracts/src/: ScaffoldEscrow.sol
contracts/test/: ScaffoldEscrow.t.sol
docs/demo-video/: LOOM-SCRIPT.md  SCRIPT.md
infra/: cdk.json  package.json
infra/lib/: scaffold-stack.ts
legacy/solana/: Anchor.toml  src-Leaderboard.tsx
legacy/solana/idl/: scaffold_escrow.types.ts
legacy/solana/programs/scaffold_escrow/: Cargo.toml
legacy/solana/programs/scaffold_escrow/src/: lib.rs
programs/scaffold_escrow/: scaffold_escrow-keypair.json
scripts/: fund-via-cdp.ts  record-demo.py  record-interactive-demo.py  record-live-demo.sh  topup-eth.ts  topup-usdc.ts
src/: App.css  App.test.tsx  App.tsx  main.tsx  vite-env.d.ts
src/chain/: abi.ts  config.ts  escrowPda.ts  leaderboard.ts  program.ts
src/components/: Leaderboard.tsx  OnChainEscrow.tsx
src/components/layout/: TopHeader.tsx
src/components/sections/: ContractBoard.tsx  HeroSection.tsx
src/components/ui/: Metric.tsx  (+1 more)
src/domain/: scaffold.test.ts  scaffold.ts
src/idl/: scaffold_escrow.json
src/wallet/: AppProviders.tsx
(+2 files in other folders)
