[package]
name = "scaffold_escrow"
version = "0.1.0"
description = "Checkpoint-weighted USDC escrow for Scaffold demo"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "scaffold_escrow"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
